wrappers for some phase equilibria procedures

--- a/python/docs/tutorials/tutorial.ipynb
+++ b/python/docs/tutorials/tutorial.ipynb
@@ -82,8 +82,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.23 s, sys: 12.9 ms, total: 1.24 s\n",
-      "Wall time: 1.24 s\n"
+      "CPU times: user 706 ms, sys: 0 ns, total: 706 ms\n",
+      "Wall time: 704 ms\n"
      ]
     }
    ],
@@ -100,7 +100,13 @@
     "\n",
     "for T in ts:\n",
     "    for P in ps:\n",
-    "        x, y, P, T, Vx, Vy, beta = yaeos.yaeos_c.flash(id=model.id, z=n, p=P, t=T)\n",
+    "        flash = model.flash_tp(n, T, P)\n",
+    "        x = flash[\"x\"]\n",
+    "        y = flash[\"y\"]\n",
+    "        P = flash[\"P\"]\n",
+    "        T = flash[\"T\"]\n",
+    "        beta = flash[\"beta\"]\n",
+    "        # x, y, P, T, Vx, Vy, beta = yaeos.yaeos_c.flash(id=model.id, z=n, p=P, t=T)\n",
     "        t.append(T)\n",
     "        p.append(P)\n",
     "        betas.append(beta)"
@@ -115,7 +121,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7b4c69cb4860>"
+       "<matplotlib.collections.PathCollection at 0x7b80c9cd7920>"
       ]
      },
      "execution_count": 5,
@@ -215,9 +221,8 @@
     "    \n",
     "    for x1 in xs:\n",
     "        x = [x1, 1-x1]\n",
-    "        p, x, y, vx, vy, beta = yaeos_c.saturation_pressure(\n",
-    "            model.id, x, T, \"bubble\"\n",
-    "        )\n",
+    "        sat = model.saturation_pressure(x, T, \"bubble\")\n",
+    "        p, y = sat[\"P\"], sat[\"y\"]\n",
     "        ps.append(p)\n",
     "        ys.append(y[0])\n",
     "\n",
@@ -244,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
