--- a/tools/notebooks/sympy.ipynb
+++ b/tools/notebooks/sympy.ipynb
@@ -496,13 +496,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sympy as sp\n",
-    "P, R, T, v, b, a, d1, d2 = sp.symbols(r\"P R T v b a \\delta_1 \\delta_2\")\n",
-    "zero = R*T/(v-b) - a/((v+d1*b)*(v+d2*b)) - P"
+    "R = sp.symbols(\"R\")\n",
+    "def generic_cubic(v, T, a, b, d1, d2):\n",
+    "    return R*T/(v-b) - a/((v+d1*b)*(v+d2*b))\n",
+    "\n",
+    "P, R, T, v, b, a, c, d1, d2 = sp.symbols(r\"P R T v b a c \\delta_1 \\delta_2\")\n",
+    "\n",
+    "zero = generic_cubic(v, T, a, b, d1, d2) - P\n",
+    "\n",
+    "\n",
+    "cubic = generic_cubic(v, T, a, b, d1, d2)\n",
+    "cubic_p = generic_cubic(v-c, T, a, b, d1, d2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle - \\frac{R T}{\\left(- b + v\\right)^{2}} + \\frac{a}{\\left(\\delta_{1} b + v\\right) \\left(\\delta_{2} b + v\\right)^{2}} + \\frac{a}{\\left(\\delta_{1} b + v\\right)^{2} \\left(\\delta_{2} b + v\\right)}$"
+      ],
+      "text/plain": [
+       "-R*T/(-b + v)**2 + a/((\\delta_1*b + v)*(\\delta_2*b + v)**2) + a/((\\delta_1*b + v)**2*(\\delta_2*b + v))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp.diff(cubic, v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle - \\frac{R T}{\\left(- b - c + v\\right)^{2}} + \\frac{a}{\\left(\\delta_{1} b - c + v\\right) \\left(\\delta_{2} b - c + v\\right)^{2}} + \\frac{a}{\\left(\\delta_{1} b - c + v\\right)^{2} \\left(\\delta_{2} b - c + v\\right)}$"
+      ],
+      "text/plain": [
+       "-R*T/(-b - c + v)**2 + a/((\\delta_1*b - c + v)*(\\delta_2*b - c + v)**2) + a/((\\delta_1*b - c + v)**2*(\\delta_2*b - c + v))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp.diff(cubic_p, v)"
    ]
   },
   {
