--- a/python/docs/source/tutorial/instantiate_model.ipynb
+++ b/python/docs/source/tutorial/instantiate_model.ipynb
@@ -13,14 +13,14 @@
     "- Excess Gibbs free energy models (GeModel)\n",
     "\n",
     "`yaeos` provides a set of predefined models that will change in the future. You\n",
-    "can check the list of available models in the API documentation or simply doing\n",
-    "the following on an interactive Python session (Jupyter Notebook, Google Colab,\n",
-    "etc):"
+    "can check the list of available models in the API documentation or simply\n",
+    "executing the following command on an interactive Python session (Jupyter\n",
+    "Notebook, Google Colab, etc):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -61,12 +61,12 @@
    "metadata": {},
    "source": [
     "All this models can be imported directly from `yaeos` with the names in the\n",
-    "listing. For example let's import and instantiate a `PengRobinson76` model:"
+    "list. For example let's import and instantiate a `PengRobinson76` model:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,14 +84,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There we have instantiated a `PengRobinson76` model with a binary mixture\n",
-    "and stored in a variable called `model`. You can check the signature to\n",
-    "instantiate any model with the `?` operator in an interactive Python session."
+    "There we have instantiated a `PengRobinson76` model with a binary mixture and\n",
+    "stored the instance in a variable called `model`. You can check the signature\n",
+    "to instantiate any model with the `?` operator in an interactive Python\n",
+    "session."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What we can do with an instantiated model?\n",
+    "## What can we do with an instantiated model?\n",
     "### Residual Helmholtz free energy models (ArModel)\n",
     "We will get later on what we can do with the Excess Gibbs free energy models\n",
     "instances.\n",
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +271,7 @@
      "text": [
       "ln(phi) =  [-0.03026809 -0.03078738]\n",
       "phi =  [0.9701854  0.96968172]\n",
-      "fugacity =  [13.58259558  5.81809033] bar\n"
+      "fugacity =  [1.35825956 0.58180903] bar\n"
      ]
     }
    ],
@@ -281,13 +282,13 @@
     "P = 2.0                           # pressure [bar]\n",
     "T = 300.0                         # temperature [K]\n",
     "\n",
-    "# Calculate the natural logarithm of fugacity coefficients (ln(phi))\n",
     "# Calculate ln(phi) with the model (PengRobinson76)\n",
     "ln_phi = model.lnphi_pt(moles = n, pressure = P, temperature = T)\n",
     "\n",
     "# Use ln(phi) to calculate the fugacity\n",
     "phi = np.exp(ln_phi)\n",
-    "fugacity = n * phi * P\n",
+    "z = n / np.sum(n)\n",
+    "fugacity = z * phi * P\n",
     "\n",
     "# Print results\n",
     "print(\"ln(phi) = \", ln_phi)\n",
@@ -301,7 +302,7 @@
    "source": [
     "Well, analyzing the previous code by parts we have:\n",
     "\n",
-    "- import numpy: `yaeos` is compatible with numpy. The functions that recieves\n",
+    "- import numpy: `yaeos` is compatible with numpy. The functions that receives\n",
     "arrays arguments are able to handle numpy arrays.\n",
     "\n",
     "- We create three variables:\n",
@@ -309,7 +310,7 @@
     "    - `T` with the temperature of the system in Kelvin\n",
     "    - `P` with the pressure of the system in bar\n",
     "\n",
-    "- call the `lnphi_pt` inside the previoulsy instantiated `model` variable\n",
+    "- call the `lnphi_pt` method inside the previously instantiated `model` variable\n",
     "\n",
     "    ```python\n",
     "    model.<thing i want to evaluate>(arguments)\n",
@@ -320,7 +321,7 @@
     "    case, the `model` object (PengRobinson76 instance). `lnphi_pt` is a \n",
     "    method of the `PengRobinson76` class that calculates the natural logarithm\n",
     "    of the fugacity coefficients of the components of the mixture at a given\n",
-    "    composition, temperature and pressure. In this case the sintax is:\n",
+    "    composition, temperature and pressure. In this case the syntax is:\n",
     "\n",
     "    ```python\n",
     "    model.lnphi_pt(n, P, T)\n",
@@ -328,10 +329,17 @@
     "\n",
     "- Use the ln(phi) returned values to calculate the fugacity coefficients\n",
     "\n",
+    "    First we calculate the fugacity coefficients.\n",
     "    ```python\n",
     "    phi = np.exp(lnphi)\n",
     "    ```\n",
-    "    Which means: $\\phi = e^{\\ln(\\phi)}$\n",
+    "    Which means: $\\phi_i = e^{\\ln(\\phi_i)}$\n",
+    "\n",
+    "    Then, we calculate the mole fractions of the mixture.\n",
+    "    ```python\n",
+    "    z = n / np.sum(n)\n",
+    "    ```\n",
+    "    Which means: $z_i = \\frac{n_i}{\\sum n_i}$\n",
     "\n",
     "    Then we use the phi variable to calculate fugacities:\n",
     "\n",
@@ -357,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -420,9 +428,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mSignature:\u001b[0m\n",
+      "\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvolume\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0mmoles\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0mpressure\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0mtemperature\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0mroot\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'stable'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDocstring:\u001b[0m\n",
+      "Calculate volume given pressure and temperature [L].\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "moles : array_like\n",
+      "    Moles number vector [mol]\n",
+      "pressure : float\n",
+      "    Pressure [bar]\n",
+      "temperature : float\n",
+      "    Temperature [K]\n",
+      "root : str, optional\n",
+      "    Volume root, use: \"liquid\", \"vapor\" or \"stable\", by default\n",
+      "    \"stable\"\n",
+      "\n",
+      "Returns\n",
+      "-------\n",
+      "float\n",
+      "    Volume [L]\n",
+      "\n",
+      "Example\n",
+      "-------\n",
+      ".. code-block:: python\n",
+      "\n",
+      "    import numpy as np\n",
+      "\n",
+      "    from yaeos import PengRobinson76\n",
+      "\n",
+      "\n",
+      "    tc = np.array([320.0, 375.0])   # critical temperatures [K]\n",
+      "    pc = np.array([45.0, 60.0])     # critical pressures [bar]\n",
+      "    w = np.array([0.0123, 0.045])   # acentric factors\n",
+      "\n",
+      "    model = PengRobinson76(tc, pc, w)\n",
+      "\n",
+      "    # Evaluating stable root volume\n",
+      "    # will print: 23.373902973572587\n",
+      "\n",
+      "    print(model.volume(np.array([5.0, 5.6]), 10.0, 300.0))\n",
+      "\n",
+      "    # Liquid root volume (not stable)\n",
+      "    # will print: 0.8156388756398074\n",
+      "\n",
+      "    print(model.volume(np.array([5.0, 5.6]), 10.0, 300.0, \"liquid\"))\n",
+      "\u001b[0;31mFile:\u001b[0m      ~/code/yaeos/python/yaeos/core.py\n",
+      "\u001b[0;31mType:\u001b[0m      method"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -496,14 +563,14 @@
     "explain it here too.\n",
     "\n",
     "As you can see in the volume documentation above. There is another argument\n",
-    "that we didn't use: `root`. This argument set as \"stable\" by default, but we\n",
+    "that we didn't use: `root`. This argument is set as \"stable\" by default, but we\n",
     "can change it to \"vapor\" or \"liquid\" if we want. Let's see which was the\n",
     "stable root in the previous evaluation:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -668,31 +735,43 @@
    "source": [
     "## Obtaining derivatives of the properties\n",
     "\n",
-    "We can obtaine somre derivatives of the properties that we have been\n",
+    "We can obtain some derivatives of the properties that we have been\n",
     "calculating. For example, the fugacity coefficients derivatives with respect\n",
     "to the number of moles of the components of the mixture."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ln(phi):  [-0.24307099 -0.2526632 ]\n",
-      "{'dt': None, 'dp': None, 'dn': array([[-2.56426727e-06,  5.98329030e-06],\n",
-      "       [ 5.98329030e-06, -1.39610107e-05]])}\n"
+      "ln(phi):  [-0.03026809 -0.03078738]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'dt': None,\n",
+       " 'dp': None,\n",
+       " 'dn': array([[-4.89454245e-08,  1.14205991e-07],\n",
+       "        [ 1.14205991e-07, -2.66480645e-07]])}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "lnphi, derivatives = model.lnphi_pt(moles = n, pressure = P, temperature = T, dn=True)\n",
     "\n",
     "print(\"ln(phi): \", lnphi)\n",
-    "print(derivatives)\n"
+    "\n",
+    "derivatives\n"
    ]
   },
   {
@@ -710,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +828,7 @@
        "array([0.00247786, 0.00257727])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
