--- a/python/docs/source/tutorial/instantiate_model.ipynb
+++ b/python/docs/source/tutorial/instantiate_model.ipynb
@@ -942,9 +942,15 @@
     "Because of that, pressure must be specified as bar, volume as liters,\n",
     "temperature as Kelvin and number of moles as moles. The returns of the \n",
     "properties will be in the same units as the inputs. Energetic properties as\n",
-    "enthalpy, entropy, etc will have unit of $[bar \\; L]$.\n",
+    "enthalpy, entropy, etc will have unit of $[bar \\; L]$, \n",
+    "which equals to centijoules $[cJ]$.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
