--- a/python/docs/source/tutorial/cubic_eos.ipynb
+++ b/python/docs/source/tutorial/cubic_eos.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "import yaeos\n",
     "\n",
-    "yaeos.models?"
+    "?yaeos.models"
    ]
   },
   {
@@ -78,34 +78,24 @@
     "from yaeos import PengRobinson76, QMR\n",
     "import numpy as np\n",
     "\n",
-    "tcs = np.array([190.6, 369.8])   # critical temperatures [K]\n",
-    "pcs = np.array([45.99, 42.48])   # critical pressures [bar]\n",
-    "w = np.array([0.0115, 0.0866])   # acentric factors [-]\n",
+    "tcs = np.array([190.6, 369.8])  # critical temperatures [K]\n",
+    "pcs = np.array([45.99, 42.48])  # critical pressures [bar]\n",
+    "w = np.array([0.0115, 0.0866])  # acentric factors [-]\n",
     "\n",
     "# binary interaction parameters\n",
-    "kij = np.array(\n",
-    "    [\n",
-    "        [0.0, 0.1],\n",
-    "        [0.1, 0.0]\n",
-    "    ]\n",
-    ")\n",
+    "kij = np.array([[0.0, 0.1], [0.1, 0.0]])\n",
     "\n",
-    "lij = np.array(\n",
-    "    [\n",
-    "        [0.0, 0.01],\n",
-    "        [0.01, 0.0]\n",
-    "    ]\n",
-    ")\n",
+    "lij = np.array([[0.0, 0.01], [0.01, 0.0]])\n",
     "\n",
     "# Set QMR\n",
-    "mixing_rule = QMR(kij = kij, lij=lij)\n",
+    "mixing_rule = QMR(kij=kij, lij=lij)\n",
     "\n",
     "# Set a model with the QMR with parameters\n",
     "model_kij = PengRobinson76(\n",
     "    critical_temperatures=tcs,\n",
     "    critical_pressures=pcs,\n",
     "    acentric_factors=w,\n",
-    "    mixrule=mixing_rule\n",
+    "    mixrule=mixing_rule,\n",
     ")\n",
     "\n",
     "# Set model without QMR (QMR with all kij and lij as zero)\n",
@@ -170,7 +160,7 @@
     "\n",
     "plt.legend()\n",
     "plt.xlabel(\"Temperature [K]\")\n",
-    "plt.ylabel(\"Pressure [bar]\")\n"
+    "plt.ylabel(\"Pressure [bar]\")"
    ]
   },
   {
@@ -196,42 +186,27 @@
    "source": [
     "from yaeos import NRTL, MHV, PengRobinson76\n",
     "\n",
-    "tcs = np.array([190.6, 369.8])   # critical temperatures [K]\n",
-    "pcs = np.array([45.99, 42.48])   # critical pressures [bar]\n",
-    "w = np.array([0.0115, 0.0866])   # acentric factors [-]\n",
+    "tcs = np.array([190.6, 369.8])  # critical temperatures [K]\n",
+    "pcs = np.array([45.99, 42.48])  # critical pressures [bar]\n",
+    "w = np.array([0.0115, 0.0866])  # acentric factors [-]\n",
     "\n",
     "# binary interaction parameters for NRTL model\n",
-    "aij = np.array(\n",
-    "    [\n",
-    "        [0.0, 0.1],\n",
-    "        [0.1, 0.0]\n",
-    "    ]\n",
-    ")\n",
+    "aij = np.array([[0.0, 0.1], [0.1, 0.0]])\n",
     "\n",
-    "bij = np.array(\n",
-    "    [\n",
-    "        [0.0, 0.01],\n",
-    "        [0.01, 0.0]\n",
-    "    ]\n",
-    ")\n",
+    "bij = np.array([[0.0, 0.01], [0.01, 0.0]])\n",
     "\n",
-    "cij = np.array(\n",
-    "    [\n",
-    "        [0.0, 0.02],\n",
-    "        [0.02, 0.0]\n",
-    "    ]\n",
-    ")\n",
+    "cij = np.array([[0.0, 0.02], [0.02, 0.0]])\n",
     "\n",
     "nrtl = NRTL(aij, bij, cij)\n",
     "\n",
-    "mixing_rule = MHV(ge = nrtl, q=-0.53)\n",
+    "mixing_rule = MHV(ge=nrtl, q=-0.53)\n",
     "\n",
     "# Set a model with the MHV with parameters\n",
     "model_nrtl = PengRobinson76(\n",
     "    critical_temperatures=tcs,\n",
     "    critical_pressures=pcs,\n",
     "    acentric_factors=w,\n",
-    "    mixrule=mixing_rule\n",
+    "    mixrule=mixing_rule,\n",
     ")\n",
     "\n",
     "# Set model without QMR (QMR with all kij and lij as zero)\n",
@@ -289,7 +264,7 @@
     "\n",
     "plt.legend()\n",
     "plt.xlabel(\"Temperature [K]\")\n",
-    "plt.ylabel(\"Pressure [bar]\")\n"
+    "plt.ylabel(\"Pressure [bar]\")"
    ]
   },
   {
