--- a/python/docs/source/tutorial/instantiate_model.ipynb
+++ b/python/docs/source/tutorial/instantiate_model.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "import yaeos\n",
     "\n",
-    "yaeos.models?"
+    "?yaeos.models"
    ]
   },
   {
@@ -73,9 +73,9 @@
     "from yaeos import PengRobinson76\n",
     "\n",
     "# Critical constants\n",
-    "Tc = [320, 375]         # critical temperatures [K]\n",
-    "Pc = [30, 45]           # critical pressures [bar]\n",
-    "w = [0.0123, 0.045]     # acentric factors [-]\n",
+    "Tc = [320, 375]  # critical temperatures [K]\n",
+    "Pc = [30, 45]  # critical pressures [bar]\n",
+    "w = [0.0123, 0.045]  # acentric factors [-]\n",
     "\n",
     "model = PengRobinson76(Tc, Pc, w)"
    ]
@@ -154,7 +154,7 @@
     }
    ],
    "source": [
-    "PengRobinson76?"
+    "?PengRobinson76"
    ]
   },
   {
@@ -243,7 +243,7 @@
     "from yaeos import NRTL, PengRobinson76, PengRobinson78, SoaveRedlichKwong, RKPR\n",
     "\n",
     "\n",
-    "RKPR?"
+    "?RKPR"
    ]
   },
   {
@@ -278,12 +278,12 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "n = np.array([7.0, 3.0])          # moles of each component [mol]\n",
-    "P = 2.0                           # pressure [bar]\n",
-    "T = 300.0                         # temperature [K]\n",
+    "n = np.array([7.0, 3.0])  # moles of each component [mol]\n",
+    "P = 2.0  # pressure [bar]\n",
+    "T = 300.0  # temperature [K]\n",
     "\n",
     "# Calculate ln(phi) with the model (PengRobinson76)\n",
-    "ln_phi = model.lnphi_pt(moles = n, pressure = P, temperature = T)\n",
+    "ln_phi = model.lnphi_pt(moles=n, pressure=P, temperature=T)\n",
     "\n",
     "# Use ln(phi) to calculate the fugacity\n",
     "phi = np.exp(ln_phi)\n",
@@ -293,7 +293,7 @@
     "# Print results\n",
     "print(\"ln(phi) = \", ln_phi)\n",
     "print(\"phi = \", phi)\n",
-    "print(\"fugacity = \", fugacity, \"bar\")\n"
+    "print(\"fugacity = \", fugacity, \"bar\")"
    ]
   },
   {
@@ -369,20 +369,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = np.array([7.0, 3.0])          # moles of each component [mol]\n",
-    "P = 15.0                          # pressure [bar]\n",
-    "V = 20.0                          # volume [L]\n",
-    "T = 300.0                         # temperature [K]\n",
+    "n = np.array([7.0, 3.0])  # moles of each component [mol]\n",
+    "P = 15.0  # pressure [bar]\n",
+    "V = 20.0  # volume [L]\n",
+    "T = 300.0  # temperature [K]\n",
     "\n",
     "\n",
     "# Evaluate pressure\n",
-    "pressure =  model.pressure(moles = n, volume = V, temperature = T)\n",
+    "pressure = model.pressure(moles=n, volume=V, temperature=T)\n",
     "\n",
     "# Evaluate ln(phi) but function of temperature and volume\n",
-    "ln_phi = model.lnphi_vt(moles = n, volume = V, temperature = T)\n",
+    "ln_phi = model.lnphi_vt(moles=n, volume=V, temperature=T)\n",
     "\n",
     "# Evaluate volume\n",
-    "volume = model.volume(moles = n, pressure = P, temperature = T)"
+    "volume = model.volume(moles=n, pressure=P, temperature=T)"
    ]
   },
   {
@@ -551,7 +551,7 @@
     }
    ],
    "source": [
-    "model.volume?"
+    "?model.volume"
    ]
   },
   {
@@ -584,19 +584,25 @@
     }
    ],
    "source": [
-    "n = np.array([7.0, 3.0])          # moles of each component [mol]\n",
-    "P = 15.0                          # pressure [bar]\n",
-    "T = 300.0                         # temperature [K]\n",
+    "n = np.array([7.0, 3.0])  # moles of each component [mol]\n",
+    "P = 15.0  # pressure [bar]\n",
+    "T = 300.0  # temperature [K]\n",
     "\n",
     "\n",
     "# Stable root\n",
-    "print(\"Stable: \", model.volume(moles = n, pressure = P, temperature = T, root=\"stable\"))\n",
+    "print(\n",
+    "    \"Stable: \", model.volume(moles=n, pressure=P, temperature=T, root=\"stable\")\n",
+    ")\n",
     "\n",
     "# Liquid root\n",
-    "print(\"Liquid: \", model.volume(moles = n, pressure = P, temperature = T, root=\"liquid\"))\n",
+    "print(\n",
+    "    \"Liquid: \", model.volume(moles=n, pressure=P, temperature=T, root=\"liquid\")\n",
+    ")\n",
     "\n",
     "# Vapor root\n",
-    "print(\"Vapor: \", model.volume(moles = n, pressure = P, temperature = T, root=\"vapor\"))"
+    "print(\n",
+    "    \"Vapor: \", model.volume(moles=n, pressure=P, temperature=T, root=\"vapor\")\n",
+    ")"
    ]
   },
   {
@@ -627,19 +633,27 @@
     }
    ],
    "source": [
-    "n = np.array([7.0, 3.0])          # moles of each component [mol]\n",
-    "P = 15.0                          # pressure [bar]\n",
-    "T = 300.0                         # temperature [K]\n",
+    "n = np.array([7.0, 3.0])  # moles of each component [mol]\n",
+    "P = 15.0  # pressure [bar]\n",
+    "T = 300.0  # temperature [K]\n",
     "\n",
     "\n",
     "# Stable root\n",
-    "print(\"Stable: \", model.lnphi_pt(moles = n, pressure = P, temperature = T, root=\"stable\"))\n",
+    "print(\n",
+    "    \"Stable: \",\n",
+    "    model.lnphi_pt(moles=n, pressure=P, temperature=T, root=\"stable\"),\n",
+    ")\n",
     "\n",
     "# Liquid root\n",
-    "print(\"Liquid: \", model.lnphi_pt(moles = n, pressure = P, temperature = T, root=\"liquid\"))\n",
+    "print(\n",
+    "    \"Liquid: \",\n",
+    "    model.lnphi_pt(moles=n, pressure=P, temperature=T, root=\"liquid\"),\n",
+    ")\n",
     "\n",
     "# Vapor root\n",
-    "print(\"Vapor: \", model.lnphi_pt(moles = n, pressure = P, temperature = T, root=\"vapor\"))"
+    "print(\n",
+    "    \"Vapor: \", model.lnphi_pt(moles=n, pressure=P, temperature=T, root=\"vapor\")\n",
+    ")"
    ]
   },
   {
@@ -726,7 +740,7 @@
     }
    ],
    "source": [
-    "model.lnphi_pt?"
+    "?model.lnphi_pt"
    ]
   },
   {
@@ -767,11 +781,13 @@
     }
    ],
    "source": [
-    "lnphi, derivatives = model.lnphi_pt(moles = n, pressure = P, temperature = T, dn=True)\n",
+    "lnphi, derivatives = model.lnphi_pt(\n",
+    "    moles=n, pressure=P, temperature=T, dn=True\n",
+    ")\n",
     "\n",
     "print(\"ln(phi): \", lnphi)\n",
     "\n",
-    "derivatives\n"
+    "derivatives"
    ]
   },
   {
@@ -803,7 +819,9 @@
     }
    ],
    "source": [
-    "lnphi, derivatives = model.lnphi_pt(moles = n, pressure = P, temperature = T, dt=True, dp=True, dn=True)\n",
+    "lnphi, derivatives = model.lnphi_pt(\n",
+    "    moles=n, pressure=P, temperature=T, dt=True, dp=True, dn=True\n",
+    ")\n",
     "\n",
     "print(\"ln(phi): \", lnphi)\n",
     "print(derivatives)"
@@ -924,7 +942,7 @@
     }
    ],
    "source": [
-    "model.pressure?"
+    "?model.pressure"
    ]
   },
   {
