--- a/python/docs/source/tutorial/more_calculations.ipynb
+++ b/python/docs/source/tutorial/more_calculations.ipynb
@@ -51,10 +51,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "n = [1.0]           # mole number of CO2 [mol]\n",
-    "Tc = [304.2]        # critical temperature of CO2 [K]\n",
-    "Pc = [73.8]         # critical pressure of CO2 [bar]\n",
-    "w = [0.2236]        # acentric factor of CO2 [-]\n",
+    "n = [1.0]  # mole number of CO2 [mol]\n",
+    "Tc = [304.2]  # critical temperature of CO2 [K]\n",
+    "Pc = [73.8]  # critical pressure of CO2 [bar]\n",
+    "w = [0.2236]  # acentric factor of CO2 [-]\n",
     "\n",
     "# Instantiate a Soave-Redlich-Kwong equation of state model\n",
     "model = SoaveRedlichKwong(Tc, Pc, w)\n",
@@ -76,7 +76,7 @@
     "# Make plot\n",
     "plt.plot(volumes, pressures)\n",
     "plt.xlabel(\"Volume [L]\")\n",
-    "plt.ylabel(\"Pressure [bar]\")\n"
+    "plt.ylabel(\"Pressure [bar]\")"
    ]
   },
   {
@@ -175,10 +175,10 @@
     "from yaeos import PengRobinson78\n",
     "\n",
     "# Pure compounds properties\n",
-    "n = [0.5, 0.5]                # mole number of CO2 and n-butane [mol]\n",
-    "Tc = [304.2, 425.1]           # critical temperature of CO2 and n-butane [K]\n",
-    "Pc = [73.8, 38.0]             # critical pressure of CO2 and n-butane [bar]\n",
-    "w = [0.2236, 0.200164]        # acentric factor of CO2 and n-butane [-]\n",
+    "n = [0.5, 0.5]  # mole number of CO2 and n-butane [mol]\n",
+    "Tc = [304.2, 425.1]  # critical temperature of CO2 and n-butane [K]\n",
+    "Pc = [73.8, 38.0]  # critical pressure of CO2 and n-butane [bar]\n",
+    "w = [0.2236, 0.200164]  # acentric factor of CO2 and n-butane [-]\n",
     "\n",
     "\n",
     "model = PengRobinson78(Tc, Pc, w)\n",
@@ -311,9 +311,9 @@
     "import numpy as np\n",
     "\n",
     "# Pure compounds properties\n",
-    "Tc = [304.2, 425.1]           # critical temperature of CO2 and n-butane [K]\n",
-    "Pc = [73.8, 38.0]             # critical pressure of CO2 and n-butane [bar]\n",
-    "w = [0.2236, 0.200164]        # acentric factor of CO2 and n-butane [-]\n",
+    "Tc = [304.2, 425.1]  # critical temperature of CO2 and n-butane [K]\n",
+    "Pc = [73.8, 38.0]  # critical pressure of CO2 and n-butane [bar]\n",
+    "w = [0.2236, 0.200164]  # acentric factor of CO2 and n-butane [-]\n",
     "\n",
     "\n",
     "model = PengRobinson78(Tc, Pc, w)\n",
@@ -322,7 +322,7 @@
     "z_co2 = np.linspace(0.0, 1.0, 100)\n",
     "z_butane = 1.0 - z_co2\n",
     "\n",
-    "t = 250     # K\n",
+    "t = 250  # K\n",
     "\n",
     "# storing bubble and dew points\n",
     "bubble_point_z_co2 = z_co2\n",
@@ -396,10 +396,10 @@
    ],
    "source": [
     "# Pure compounds properties\n",
-    "n = [0.5, 0.5]                # mole number of CO2 and n-butane [mol]\n",
-    "Tc = [304.2, 425.1]           # critical temperature of CO2 and n-butane [K]\n",
-    "Pc = [73.8, 38.0]             # critical pressure of CO2 and n-butane [bar]\n",
-    "w = [0.2236, 0.200164]        # acentric factor of CO2 and n-butane [-]\n",
+    "n = [0.5, 0.5]  # mole number of CO2 and n-butane [mol]\n",
+    "Tc = [304.2, 425.1]  # critical temperature of CO2 and n-butane [K]\n",
+    "Pc = [73.8, 38.0]  # critical pressure of CO2 and n-butane [bar]\n",
+    "w = [0.2236, 0.200164]  # acentric factor of CO2 and n-butane [-]\n",
     "\n",
     "\n",
     "model = PengRobinson78(Tc, Pc, w)\n",
@@ -457,11 +457,32 @@
     "plt.plot([x, y], [p, p], linestyle=\"--\", color=\"gray\")\n",
     "\n",
     "# flash compositions\n",
-    "plt.plot(x, p, marker=\"s\", linestyle=\"none\", color=\"purple\", label=\"Flash: liquid phase\")\n",
-    "plt.plot(y, p, marker=\"s\", linestyle=\"none\", color=\"blue\", label=\"Flash: vapor phase\")\n",
+    "plt.plot(\n",
+    "    x,\n",
+    "    p,\n",
+    "    marker=\"s\",\n",
+    "    linestyle=\"none\",\n",
+    "    color=\"purple\",\n",
+    "    label=\"Flash: liquid phase\",\n",
+    ")\n",
+    "plt.plot(\n",
+    "    y,\n",
+    "    p,\n",
+    "    marker=\"s\",\n",
+    "    linestyle=\"none\",\n",
+    "    color=\"blue\",\n",
+    "    label=\"Flash: vapor phase\",\n",
+    ")\n",
     "\n",
     "# global composition\n",
-    "plt.plot(0.5, p, marker=\"s\", linestyle=\"none\", color=\"red\", label=\"Global composition\")\n",
+    "plt.plot(\n",
+    "    0.5,\n",
+    "    p,\n",
+    "    marker=\"s\",\n",
+    "    linestyle=\"none\",\n",
+    "    color=\"red\",\n",
+    "    label=\"Global composition\",\n",
+    ")\n",
     "\n",
     "# Pxy diagram\n",
     "plt.legend()\n",
@@ -490,11 +511,7 @@
    "outputs": [],
    "source": [
     "env = model.phase_envelope_pt(\n",
-    "    z=[0.5, 0.5],\n",
-    "    kind=\"bubble\",\n",
-    "    max_points=600,\n",
-    "    t0=100.0,\n",
-    "    p0=4.0\n",
+    "    z=[0.5, 0.5], kind=\"bubble\", max_points=600, t0=100.0, p0=4.0\n",
     ")"
    ]
   },
@@ -578,7 +595,14 @@
     "plt.plot(env[\"Ts\"], env[\"Ps\"], label=\"Envelope\")\n",
     "\n",
     "# Critical point\n",
-    "plt.plot(env[\"Tcs\"], env[\"Pcs\"], marker=\"x\", linestyle=\"none\", color=\"red\", label=\"Critical point\")\n",
+    "plt.plot(\n",
+    "    env[\"Tcs\"],\n",
+    "    env[\"Pcs\"],\n",
+    "    marker=\"x\",\n",
+    "    linestyle=\"none\",\n",
+    "    color=\"red\",\n",
+    "    label=\"Critical point\",\n",
+    ")\n",
     "\n",
     "plt.legend()\n",
     "plt.title(\"PT envelope CO2 (0.5) - n-butane (0.5)\")\n",
