--- a/python/docs/source/tutorial/available_models.ipynb
+++ b/python/docs/source/tutorial/available_models.ipynb
@@ -243,27 +243,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "get_groups() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 13\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m groups\n\u001b[1;32m     12\u001b[0m molecules \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124methanol\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwater\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m---> 13\u001b[0m groups \u001b[38;5;241m=\u001b[39m \u001b[43mget_groups\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmolecules\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[2], line 7\u001b[0m, in \u001b[0;36mget_groups\u001b[0;34m(molecules)\u001b[0m\n\u001b[1;32m      5\u001b[0m groups \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m molecule \u001b[38;5;129;01min\u001b[39;00m molecules:\n\u001b[0;32m----> 7\u001b[0m     grp \u001b[38;5;241m=\u001b[39m \u001b[43mget_groups\u001b[49m\u001b[43m(\u001b[49m\u001b[43munifac\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmolecule\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m     groups\u001b[38;5;241m.\u001b[39mappend(writers\u001b[38;5;241m.\u001b[39mto_thermo(grp\u001b[38;5;241m.\u001b[39msubgroups, unifac))\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m groups\n",
-      "\u001b[0;31mTypeError\u001b[0m: get_groups() takes 1 positional argument but 2 were given"
-     ]
+     "data": {
+      "text/plain": [
+       "[{1: 1, 2: 1, 14: 1}, {16: 1}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# We will use the ugropy library to get the UNIFAC groups of ethanol and water\n",
     "from ugropy import get_groups, unifac, writers\n",
     "\n",
-    "def get_groups(molecules):\n",
+    "from yaeos import UNIFACVLE\n",
+    "\n",
+    "def find_groups(molecules):\n",
     "    groups = []\n",
     "    for molecule in molecules:\n",
     "        grp = get_groups(unifac, molecule)\n",
@@ -272,16 +272,9 @@
     "\n",
     "\n",
     "molecules = [\"ethanol\", \"water\"]\n",
-    "groups = get_groups(molecules)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from yaeos.models.excess_gibbs import UNIFACVLE"
+    "groups = find_groups(molecules)\n",
+    "\n",
+    "groups"
    ]
   },
   {
@@ -291,29 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{1: 1, 2: 1, 14: 1}, {16: 1}]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model = UNIFACVLE(groups)\n",
-    "\n",
-    "groups"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -322,12 +293,13 @@
        "array([0.18534142, 0.40331396])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "model = UNIFACVLE(groups)\n",
     "model.ln_gamma([0.5, 0.5], 298.0)"
    ]
   }
