keep working later first compositional derivative

--- a/src/models/excess_gibbs/trying.ipynb
+++ b/src/models/excess_gibbs/trying.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from thermo import UNIQUAC"
+    "from thermo import UNIQUAC\n",
+    "\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,22 +44,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.41518386714116245, 0.5848161328588375]\n",
-      "[0.4151838671411625, 0.5848161328588375]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[[0.42323225098096795, -0.42323225098096795],\n",
+       " [-0.423232250980968, 0.42323225098096795]]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(model.thetas())\n",
-    "\n",
-    "print([0.41518386714116251, 0.58481613285883749])"
+    "model.dphis_dxs()\n"
    ]
   }
  ],
